fix bug that overflow the with of the calculator when the number is long

--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,7 @@ button {
 .calculator {
     display: flex;
     flex-direction: column;
-    flex-shrink: 0;
+    width: 250px;
     gap: 15px;
     background-color: var(--primary-bg-color);
     padding: 15px;
@@ -63,37 +63,46 @@ button {
 
 
 .display {
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: end;
     gap: 5px;
+    padding: 0 5px;
 }
-.result {
+.result, .operation {
     width: 100%;
     height: 40px;
     overflow: hidden;
     display: flex;
     justify-content: end;
+    white-space: nowrap;
+    flex-shrink: 0;
+    direction: rtl;
 }
-.operation {
+
+.result > span, .operation > span {
+    display: inline-block;
     width: 100%;
-    height: 40px;
+    text-align: right;
+    text-overflow: ellipsis;
     overflow: hidden;
-    display: flex;
-    justify-content: end;
 }
+
+.result > span {
+    font-size: 30px;
+}
+
 .operation > span {
     font-size: 25px;
     color: var(--options-btn-bg-color);
-}
-.result > span {
-    font-size: 30px;
 }
 
 
 .buttons {
     display: flex;
     gap: 5px;
+    align-self: center;
 }
 
 
@@ -101,6 +110,16 @@ button {
     display: flex;
     flex-direction: column;
     gap: 5px;
+}
+.options-row {
+    display: flex;
+    gap: 5px;
+}
+.options-row > button {
+    background-color: var(--options-btn-bg-color);
+}
+.options-row > button:active {
+    opacity: 0.7;
 }
 .number-row {
     display: flex;
@@ -126,9 +145,6 @@ button {
 }
 .number-row > button:active {
     opacity: 0.7;
-}
-.number-row:first-child > button {
-    background-color: var(--options-btn-bg-color);
 }
 
 
